# ProjectOpenHandMonk

./: .gitignore  AGENTS.md  README.md  skills-lock.json
poc/breaking-protocol-protoamp/: README.md  pyproject.toml
poc/breaking-protocol-protoamp/configs/: model_registry.safe.yaml
poc/breaking-protocol-protoamp/design/: turing_asr_scenario_plan.md  turing_implementation_plan.md
poc/breaking-protocol-protoamp/docs/: mira_paper_outline.md  model_asr_scaffold.md  research_paper_draft.md
poc/breaking-protocol-protoamp/research/: alan_agentdojo_injecagent_mapping.md  alan_source_brief.md  klive_metrics_protocol.md  klive_model_asr_protocol.md
poc/breaking-protocol-protoamp/scripts/: model_asr_dry_run.py
poc/breaking-protocol-protoamp/tests/: conftest.py  test_attest.py  test_events.py  test_generator.py  test_metrics.py  test_registry.py  test_safety.py  test_sampling_abuse_generation.py  test_simulator.py  test_source_adapters.py
poc/canaryweave/: .gitignore  FINAL_STATUS.md  README.md  pyproject.toml
poc/canaryweave-fides/: FINAL_STATUS.md  README.md  pyproject.toml
poc/canaryweave-fides/artifacts/: smoke_report.json
poc/canaryweave-fides/design/: evaluation_methodology.md  multi_dataset_harness_architecture.md  next_phase_vigil_style_harness_plan.md  rule_schema.md
poc/canaryweave-fides/docs/: attack_to_rule_mapping.md  canaryweave-fides-demo.cast  demo_plan.md  initial_research_report.md  next_phase_controlled_evidence_plan.md  peer_review_report.md  rule_authoring.md  running_evals.md  thesis.md
poc/canaryweave-fides/research/: nova_mcp_detection_planning_notes.md  nova_opa_fides_summary.md
poc/canaryweave-fides/scripts/: check_public_artifacts.py  demo_asciinema.sh  run_multi_dataset_eval.sh  run_smoke.sh
poc/canaryweave-fides/tests/: test_adapters.py  test_artifact_safety.py  test_asb_evidence_reporting.py  test_cases.py  test_config_cli.py  test_decisions.py  test_facts.py  test_gate.py  test_metrics_cli.py  test_modular_cli.py  test_portability.py  test_query_llm_gate.py  test_reporting.py  test_rule_schema.py  test_runner.py  test_warden_rule_style.py
poc/canaryweave/configs/: model_registry.safe.yaml
poc/canaryweave/design/: hermes_gsd_autonomous_plan.md  turing_asr_scenario_plan.md  turing_implementation_plan.md
poc/canaryweave/docs/: attack_claim_alignment.md  canaryweave_findings.md  mira_paper_outline.md  model_asr_scaffold.md  research_paper_draft.md  sampling_attack_demo.md
poc/canaryweave/research/: alan_agentdojo_injecagent_mapping.md  alan_source_brief.md  klive_metrics_protocol.md  klive_model_asr_protocol.md
poc/canaryweave/scripts/: autonomous_research_loops.py  mcp_sampling_poc.py  model_asr_dry_run.py  sampling_demo.py
poc/canaryweave/tests/: conftest.py  test_attest.py  test_autonomous_research_loops.py  test_demo_sampling.py  test_documentation_consistency.py  test_event_trace_semantics.py  test_events.py  test_generator.py  test_mcp_sampling_poc.py  test_metrics.py  test_model_asr_dry_run.py  test_registry.py  test_review_regressions.py  test_safety.py  test_sampling_abuse_generation.py  test_sampling_demo_review_regressions.py  test_simulator.py  (+1 more)
poc/mcp-security-bench/: README.md  mcp-client-config.json  pyproject.toml
(+219 files in other folders)
