[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breaking-protocol-protoamp"
version = "0.1.0"
description = "Controlled PROTOAMP-style MCP protocol-safety benchmark POC"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Open Hand Monk" }]
license = { text = "MIT" }

[project.scripts]
protoamp = "protoamp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
