[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canaryweave-fides"
version = "0.1.0"
description = "Controlled MCP policy-rule and FIDES/IFC evaluation POC"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Open Hand Monk" }]
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.scripts]
canaryweave-fides = "canaryweave_fides.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
