[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canaryweave-asr"
version = "0.1.0"
description = "Controlled CanaryWeave MCP protocol-safety benchmark POC"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Open Hand Monk" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.27.1,<2",
]

[project.scripts]
canaryweave = "canaryweave.cli:main"
canaryweave-mcp-sampling-poc = "canaryweave.mcp_poc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
