[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-bench"
version = "0.1.0"
description = "MCP Security Benchmark — Evil server for testing LLM client defenses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-evil-server = "evil_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evil_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
